--- a/project1/DeepLearning_Project_Colab.ipynb
+++ b/project1/DeepLearning_Project_Colab.ipynb
@@ -1528,6 +1528,122 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Visualize CNN predictions on test images\n",
+        "print(\"\\n\" + \"=\"*60)\n",
+        "print(\"CNN Number Identification Demo\")\n",
+        "print(\"=\"*60)\n",
+        "\n",
+        "# Select some test images to visualize\n",
+        "num_samples = 12\n",
+        "sample_indices = np.random.choice(len(X_test_cnn), num_samples, replace=False)\n",
+        "\n",
+        "fig, axes = plt.subplots(3, 4, figsize=(14, 10))\n",
+        "fig.suptitle('CNN Predictions on Test Images', fontsize=16, fontweight='bold')\n",
+        "\n",
+        "correct_count = 0\n",
+        "for idx, ax in enumerate(axes.flat):\n",
+        "    if idx < num_samples:\n",
+        "        sample_idx = sample_indices[idx]\n",
+        "        img = X_test_cnn[sample_idx:sample_idx+1]  # Shape: (1, 1, 28, 28)\n",
+        "        true_label = np.argmax(y_test_cnn[sample_idx])\n",
+        "        \n",
+        "        # Get prediction\n",
+        "        pred_probs = cnn.forward(img)\n",
+        "        pred_label = np.argmax(pred_probs[0])\n",
+        "        confidence = pred_probs[0][pred_label] * 100\n",
+        "        \n",
+        "        # Display image\n",
+        "        ax.imshow(img[0, 0], cmap='gray')\n",
+        "        \n",
+        "        # Color: green if correct, red if wrong\n",
+        "        color = 'green' if pred_label == true_label else 'red'\n",
+        "        if pred_label == true_label:\n",
+        "            correct_count += 1\n",
+        "        \n",
+        "        # Title with prediction and confidence\n",
+        "        ax.set_title(f'True: {true_label} | Pred: {pred_label}\\nConfidence: {confidence:.1f}%', \n",
+        "                    color=color, fontsize=11, fontweight='bold')\n",
+        "        ax.axis('off')\n",
+        "    else:\n",
+        "        ax.axis('off')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "print(f\"\\nAccuracy on {num_samples} random samples: {correct_count}/{num_samples} ({100*correct_count/num_samples:.1f}%)\")\n",
+        "print(\"\\n\" + \"=\"*60)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Detailed prediction analysis for a single image\n",
+        "print(\"\\n\" + \"=\"*60)\n",
+        "print(\"Detailed Prediction Analysis\")\n",
+        "print(\"=\"*60)\n",
+        "\n",
+        "# Pick a random test image\n",
+        "test_idx = np.random.randint(0, len(X_test_cnn))\n",
+        "img = X_test_cnn[test_idx:test_idx+1]\n",
+        "true_label = np.argmax(y_test_cnn[test_idx])\n",
+        "\n",
+        "# Get prediction probabilities\n",
+        "pred_probs = cnn.forward(img)[0]\n",
+        "pred_label = np.argmax(pred_probs)\n",
+        "\n",
+        "# Create visualization\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+        "\n",
+        "# Left: Show the image\n",
+        "axes[0].imshow(img[0, 0], cmap='gray')\n",
+        "axes[0].set_title(f'Input Image\\nTrue Label: {true_label}', fontsize=14, fontweight='bold')\n",
+        "axes[0].axis('off')\n",
+        "\n",
+        "# Right: Show probability distribution\n",
+        "bars = axes[1].bar(range(10), pred_probs * 100, color=['red' if i == pred_label else 'blue' for i in range(10)])\n",
+        "axes[1].set_xlabel('Digit', fontsize=12)\n",
+        "axes[1].set_ylabel('Probability (%)', fontsize=12)\n",
+        "axes[1].set_title(f'Prediction Probabilities\\nPredicted: {pred_label} ({pred_probs[pred_label]*100:.1f}%)', \n",
+        "                 fontsize=14, fontweight='bold')\n",
+        "axes[1].set_xticks(range(10))\n",
+        "axes[1].set_ylim([0, 100])\n",
+        "axes[1].grid(True, alpha=0.3)\n",
+        "\n",
+        "# Add value labels on bars\n",
+        "for i, (bar, prob) in enumerate(zip(bars, pred_probs)):\n",
+        "    height = bar.get_height()\n",
+        "    axes[1].text(bar.get_x() + bar.get_width()/2., height + 1,\n",
+        "                f'{prob*100:.1f}%', ha='center', va='bottom', fontsize=9)\n",
+        "\n",
+        "# Highlight correct prediction\n",
+        "if pred_label == true_label:\n",
+        "    result_text = f\"✓ CORRECT! Model correctly identified digit {pred_label}\"\n",
+        "    result_color = 'green'\n",
+        "else:\n",
+        "    result_text = f\"✗ WRONG! Model predicted {pred_label} but true label is {true_label}\"\n",
+        "    result_color = 'red'\n",
+        "\n",
+        "fig.suptitle(result_text, fontsize=14, fontweight='bold', color=result_color, y=0.02)\n",
+        "plt.tight_layout()\n",
+        "plt.subplots_adjust(top=0.9)\n",
+        "plt.show()\n",
+        "\n",
+        "print(f\"\\nTrue Label: {true_label}\")\n",
+        "print(f\"Predicted Label: {pred_label}\")\n",
+        "print(f\"Confidence: {pred_probs[pred_label]*100:.2f}%\")\n",
+        "print(f\"Result: {'CORRECT ✓' if pred_label == true_label else 'WRONG ✗'}\")\n",
+        "print(\"=\"*60)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "H14UUE5jJcqh"
